changes have been made

--- a/index.html
+++ b/index.html
@@ -394,11 +394,11 @@
             1,240,700'den Fazla Kullanıcımızın Arasına Katılın
           </h1>
           <p class="lead">
-            Siz de geniş ve aktif bir topluluğun parçası olun! SipStash ailesine
-            katılarak yeni insanlarla tanışın, deneyimlerinizi paylaşın ve bilgi
-            alışverişinde bulunun. Birlikte, daha güçlü ve daha bilgili bir
-            topluluk oluşturabiliriz. Hemen katılın ve SipStash dünyasına adım
-            atın!
+            SipStash, içeceklerinizi keşfetmenizi sağlayan bir e-ticaret
+            platformudur! En yeni içecek trendlerini yakalayın ve favori
+            içeceklerinizi bulun. SipStash'a katılarak içeceklerle dolu bir
+            dünyaya adım atın. Sadece bir tıkla, sevdiğiniz içecekleri kapınıza
+            getirin!
           </p>
         </div>
       </div>
@@ -417,7 +417,7 @@
 
       <div class="row download-bottom-image" data-aos="fade-up">
         <div class="phone-screenshot">
-          <img src="images/Login.jpg" alt="App Screenshot 1" />
+          <img src="images/Onboarding1.png" alt="App Screenshot 1" />
         </div>
         <div class="phone-screenshot">
           <img src="images/Favorites.jpg" alt="App Screenshot 2" />
